Take Don's suggestion.

--- a/index.html
+++ b/index.html
@@ -1655,9 +1655,9 @@ child is old enough to make their own decisions about it.
 
 A child may discover that they're LGBT and need to find supportive resources online. If they have a
 homophobic or transphobic parent, that parent might have configured their [=user agent=] to either
-block or inform the parent when the child visits pro-LGBT websites. The [=user agent=] needs to warn
-the child about how it's configured so that the child can know to ask a better [=guardian=] for
-access to the help they need.
+block or inform the parent when the child visits web pages about LGBT-related subjects. The [=user
+agent=] needs to warn the child about how it's configured so that the child can know to ask a better
+[=guardian=] for access to the help they need.
 
 </aside>
 
