Have crosslinking issues reference the sections.

--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@ also says what sort of user is expected to agree. Users in other classes can the
 appropriately.
 
 <aside class="issue">
-Link this to the "guardians" section when that's written.
+Link this to [[[#guardians]]].
 </aside>
 
 ## Harassment
@@ -1713,8 +1713,7 @@ agent=] needs to warn the child about how it's configured so that the child can 
 
 <aside class="issue">
 
-Add crosslinks to the <a href="https://github.com/w3ctag/privacy-principles/pull/202">upcoming
-device owners section</a>.
+Add crosslinks to [[[#device-administrators]]].
 
 </aside>
 
