Information itself isn't acceptable or not.

--- a/index.html
+++ b/index.html
@@ -1374,8 +1374,8 @@ scratch, without relying on the existing API.
 <div class="practice">
   <span class="practicelab">If existing APIs provide access to some information, but
   we have a plan to change those APIs to prevent that access, new APIs must not be added
-  that provide that same information without extra [=access guards=] that make the information
-  acceptable.</span>
+  that provide that same information without extra [=access guards=] that make the access to the
+  information acceptable.</span>
 </div>
 
 ### Handling information we can't completely block {#sketchy-information}
