--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script class="remove">
     // All config options at https://respec.org/docs/
     var respecConfig = {
-      specStatus: 'DNOTE',
+      specStatus: 'ED',
       group: 'tag',
       format: 'markdown',
       editors: [{
