make sure that the latest version is correct too

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         w3cid: 75192,
       }],
       github: 'w3ctag/privacy-principles',
+      latestVersion: 'https://www.w3.org/TR/privacy-principles/',
       shortName: 'privacy-principles',
       lint: {
         'required-sections': false,
