make sure that the latest version is correct too
SHA: 31fdce5a7304c997e0f734f4c261119dad609425
Reason: push, by darobin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
     }
   ],
   "github": "w3ctag/privacy-principles",
+  "latestVersion": "https://www.w3.org/TR/privacy-principles/",
   "shortName": "privacy-principles",
   "lint": {
     "required-sections": false
@@ -727,7 +728,7 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
                 <a class="u-url" href="https://w3ctag.github.io/privacy-principles/">https://w3ctag.github.io/privacy-principles/</a>
               </dd>
         <dt>Latest published version:</dt><dd>
-                <a href="https://www.w3.org/privacy-principles/">https://www.w3.org/privacy-principles/</a>
+                <a href="https://www.w3.org/TR/privacy-principles/">https://www.w3.org/TR/privacy-principles/</a>
               </dd>
         <dt>Latest editor's draft:</dt><dd><a href="https://w3ctag.github.io/privacy-principles/">https://w3ctag.github.io/privacy-principles/</a></dd>
         <dt>History:</dt><dd>
