--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
 
 <section id="abstract">
 
-Privacy is an essential part of the Web ([[?ETHICAL-WEB]]). This document provides definitions
-for privacy and related concepts that are applicable worldwide. It also provides a set of privacy
+Privacy is an essential part of the Web. This document provides definitions
+for privacy and related concepts that are applicable worldwide as well as a set of privacy
 principles that should guide the development of the Web as a trustworthy platform. People using
 the Web would benefit from a stronger relationship between technology and policy, and this
 document is written to work with both.
@@ -455,13 +455,14 @@ conclusion of the task force, the TAG intends to adopt this document as a Findin
 
 ## How This Document Fits In
 
-This document elaborates on the [privacy principle](https://www.w3.org/2001/tag/doc/ethical-web-principles/#privacy) in the [[[Ethical-Web]]]. It doesn't
-address how to balance the different principles in that document if they come into
-conflict.
+This document elaborates on the [privacy principle](https://www.w3.org/2001/tag/doc/ethical-web-principles/#privacy)
+from the [[[Ethical-Web]]]: "Security and privacy are essential." While it focuses on privacy, this should
+not be taken as an indication that privacy is necessarily more important than other ethical web principles and
+this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
 Privacy is covered by legal frameworks and this document recognises that existing data
-protection laws take precedence for legal matters. However, because the Web is global, we
-benefit from having shared concepts to guide its evolution as a system built for the people using it
+protection laws take precedence on legal matters. However, because the Web is global, we
+benefit from having shared concepts to guide its evolution as a system built for the people who use it
 ([[?RFC8890]]). A clear and well-defined view of privacy on the Web, informed by research,
 can hopefully help all the Web's participants in different legal regimes. Our shared
 understanding is that the law is a floor, not a ceiling.
