--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ understanding is that the law is a floor, not a ceiling.
 
 <section class="introductory">
 
-## Audience for this Document
+## Audiences for this Document {#audience-for-this-document}
 
 The primary audiences for this document are
 
@@ -480,14 +480,14 @@ The primary audiences for this document are
  * reviewers of web specifications, and
  * web developers
 
-Other audiences include:
+Additional audiences include:
 
  * policy makers, and
  * operators of privacy-related services.
 
 This document is intended to help its audiences address privacy concerns as early as possible in the life
 cycle of a new Web standard or feature, or in the development of Web products.  Beginning with privacy in mind will help avoid the need to
-add special cases to comply with specific requirements one law or one jurisdiction at a time, later, or
+add special cases later to address unforeseen but predictable issues or
 to build systems that turn out to be unacceptable to users.
 
 Because this document guides privacy reviews of new standards, designers should consult it early in the design to make sure their feature passes the review smoothly.
