--- a/index.html
+++ b/index.html
@@ -504,39 +504,37 @@ establishing and enforcing rules to govern the power of data.
 
 The Web is a social and technical system made up of [=information flows=]. Because this document
 is specifically about [=privacy=] as it applies to the Web, it focuses on privacy with respect to
-information flows. Our goal is not to cover all privacy issues, but rather to provide enough
-background to support the Web community in making informed decisions about privacy and to weave
-privacy into the architecture of the Web. Few architectural principles are absolute, and privacy is
-no exception: privacy can come into tension with other desirable properties of an ethical
-architecture, and when that happens the Web community will have to work together to strike the right
-balance.
+information flows. Our goal is not to cover all possible privacy issues, but rather to provide enough
+background to support the Web community in making informed decisions about privacy and in weaving
+privacy into the architecture of the Web.
+
+Few architectural principles are absolute, and privacy is no exception: privacy can come into tension
+with other desirable properties of an ethical architecture, and when that happens the Web community
+will have to work together to strike the right balance.
 
 Information is power. It can be used to predict and to influence people, as well as to design online
 spaces that control people's behaviour. The collection and [=processing=] of information in greater
 volume, with greater precision and reliability, with increasing interoperability across a growing
 variety of data types, and at intensifying speed is leading to an unprecedented concentration of power
-that threatens private and public liberties.
-
-What's more, automation and the increasing computerisation of all aspects of our lives
-both increase the power of information and decrease the cost of a number of intrusive
+that threatens private and public liberties. What's more, automation and the increasing computerisation
+of all aspects of our lives both increase the power of information and decrease the cost of a number of intrusive
 behaviours that would be more easily kept in check if the perpetrator had to be in the same room as
 the victim.
 
-These asymmetries of information and of automation create commanding asymmetries of power.
+These asymmetries of information and of automation create powerful asymmetries of power.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of [=principles=] that regulate [=information flows=]. When
 [=people=] are involved in [=information flows=], [=data governance=] determines how
 these [=principles=] constrain and distribute the power of information between different [=actors=].
-The <dfn>principles</dfn> describe the way in which different [=actors=] may, must,
+Such <dfn>principles</dfn> describe the ways in which different [=actors=] may, must,
 or must not produce or [=process=] flows of information from, to, or about other [=actors=]
-([[?GKC-Privacy]], [[?IAD]]).
+([[?GKC-Privacy]], [[?IAD]]). Typically, <dfn>actors</dfn> are [=people=] but they can also be collective entities such as
+companies, associations, or governmental bodies, which are known as [=parties=].
 
-Typically, <dfn>actors</dfn> are [=people=] but they can also be collective endeavours such as
-companies, associations, or political parties (eg. in the case of espionage), which are known as
-[=parties=]. It is important to keep in mind that not all people are equal in how they can resist
+It is important to keep in mind that not all people are equal in how they can resist
 the imposition of unfair [=principles=]: some [=people=] are more [=vulnerable=] and therefore in greater
-need of protection. The focus of this document is on the impact that this power differential can
-have against people, but it can also impact other [=actors=], such as companies or governments.
+need of protection. The focus of this document is on the impact that differences in information power can
+have against people, but they can also impact other [=actors=], such as companies or governments.
 
 [=Principles=] vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
 have different expectations of [=privacy=] at work, at a café, or at home for instance. Understanding and
@@ -544,7 +542,7 @@ evaluating a privacy situation is best done by clearly identifying:
 
 * Its [=actors=], which include the subject of the information as well as the sender and the recipient
   of the [=information flow=]. (Note that recipients might not always want to be recipients.)
-* The specific type of data in the [=information flow=].
+* The type of data involved in the [=information flow=].
 * The [=principles=] that are in use in this specific context.
 
 It is important to keep in mind that there are <em>always</em> privacy [=principles=] and that all
