rename dark patterns

--- a/index.html
+++ b/index.html
@@ -543,25 +543,25 @@ evaluating a privacy situation is best done by clearly identifying:
 * Its [=actors=], which include the subject of the information as well as the sender and the recipient
   of the [=information flow=]. (Note that recipients might not always want to be recipients.)
 * The type of data involved in the [=information flow=].
-* The [=principles=] that are in use in this specific context.
+* The [=principles=] that are in use in this context.
 
 It is important to keep in mind that there are <em>always</em> privacy [=principles=] and that all
-of them imply different power dynamics. Some [=principles=] may be more permissive, but that does
-not render them neutral — it merely indicates that they are supportive of the power dynamic that
-emerges from permissive [=processing=]. We must therefore determine which [=principles=]
+of them imply different power dynamics. Some sets of [=principles=] may be more permissive, but that does
+not make them neutral — it means that they support the power dynamic that
+comes with permissive [=processing=]. We must therefore determine which [=principles=]
 best align with ethical Web values in Web [=contexts=] ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
-<dfn data-lt='information'>Information flows</dfn> as understood in this document are information
+<dfn data-lt='information'>Information flows</dfn> as understood in this document mean information
 exchanged or processed by [=actors=]. The information itself need not necessarily be
 [=personal data=]. Disruptive or interruptive information flowing <em>to</em> a
 person is in scope, as is [=de-identified=] [=data=] that can be used to manipulate people or that
-was extracted by observing people's behaviour on someone else's website.
+was extracted by observing people's behaviour on a website.
 
 [=Information flows=] need to be understood from more than one perspective: there is the flow of information
 <em>about</em> a person (the subject) being processed or transmitted to any other party, and there is
 the flow of information <em>towards</em> a person (the recipient). Recipients can have their privacy violated in multiple ways such as
-unexpected shocking images, loud noises while one intends to sleep, manipulative information,
-interruptive messages when a person's focus is on something else, or harassment when they seek
+unexpected shocking images, loud noises while they intend to sleep, manipulative information,
+interruptive messages when their focus is on something else, or harassment when they seek
 social interactions.
 
 On the Web, [=information flows=] may involve a wide variety of [=parties=] that are not always
@@ -581,7 +581,7 @@ people involved in the information flow.
 
 ## Individual Autonomy {#autonomy}
 
-A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own volition,
+A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own personal will,
 without undue influence from other [=parties=]. People have limited intellectual resources and
 time with which to weigh decisions, and by necessity rely on shortcuts when making
 decisions. This makes their preferences, including privacy preferences, malleable and susceptible to
@@ -591,8 +591,8 @@ have decided given arbitrary amounts of time and relatively unlimited intellectu
 and [=autonomy=] is decreased when a similar shortcut goes against decisions made under such
 ideal conditions.
 
-Affordances and interactions that decrease [=autonomy=] are known as <dfn>dark patterns</dfn>.
-A [=dark pattern=] does not have to be intentional ([[?Dark-Patterns]], [[?Dark-Pattern-Dark]]).
+Affordances and interactions that decrease [=autonomy=] are known as <dfn>deceptive patterns</dfn> or <dfn>dark patterns</dfn>.
+A [=deceptive pattern=] does not have to be intentional ([[?Dark-Patterns]], [[?Dark-Pattern-Dark]]).
 
 Because we are all subject to motivated reasoning, the design of defaults and affordances
 that may impact [=autonomy=] should be the subject of independent scrutiny.
@@ -606,8 +606,6 @@ people's [=autonomy=] with respect to their own [=data=] is enhanced through [=a
 defaults and choice architectures.
 
 ### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
-
-<aside class="issue">Broaden this from [=processing=] to general interactions with systems.</aside>
 
 Different procedural mechanisms exist to enable [=people=] to control how they interact
 with systems in the world. Mechanisms that increase the number of [=purposes=] for which
@@ -1808,8 +1806,8 @@ their attributes, interests, opinions or behaviour. Others may be
 vulnerable because of the situation or setting (e.g., where there
 is information asymmetry or other power imbalances), or they lack
 the capacity to fully assess the risks, or because choices are
-not presented in an easy-to-understand meaningful way (e.g., dark
-patterns). Yet others may be vulnerable because they have not been
+not presented in an easy-to-understand meaningful way (e.g., [=deceptive
+patterns=]). Yet others may be vulnerable because they have not been
 consulted about their privacy needs and expectations, or considered
 in the decisions about the design of the product of service.
 
@@ -2008,7 +2006,7 @@ trick the [=person=] into opting back into the [=processing=].
 
 [=Parties=] can invest time and energy into automating ways of gathering [=data=] from [=people=] and can
 design their products in ways that make it a lot easier for [=people=] to disclose information than not, whereas
-[=people=] typically have to manually wade through options, repeated prompts, and deceptive patterns. In many
+[=people=] typically have to manually wade through options, repeated prompts, and [=deceptive patterns=]. In many
 cases, the absence of data — when a [=person=] refuses to provide some information — can also be identifying
 or revealing. Additionally, APIs can be defined or implemented in rigid ways that can prevent people from
 accessing useful functionality. For example, I might want to look for restaurants in a city I will be visiting
