stop using render

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ data should be set up in such a way that it requires deliberate, specific action
 (eg. triggering a form control that is not on a modal dialog) and if that [=consent=] is persistent,
 there should be a vivid indicator that data is being transmitted shown at all times, in such a way
 that the person can easily switch it off. In general, providing [=consent=] should be rare,
-difficult, highly intentional, and temporary.
+slow, highly intentional, and temporary.
 
 When an [=opt-out=] mechanism exists, it should preferably be complemented by a
 <dfn>global opt-out</dfn> mechanism. The function of a [=global opt-out=] mechanism is to
@@ -641,7 +641,7 @@ Conceptually, a [=global opt-out=] mechanism is an automaton operating as part o
 [=user agent=], which is to say that it is equivalent to a robot that would carry out a
 [=person=]'s bidding by pressing an [=opt-out=] button with every interaction that the
 [=person=] has with a site, or more generally conveys an expression of the [=person=]'s
-rights in a relevant jurisdiction. (For instance, under [[?GDPR]], the [=person=] may be
+rights in a relevant jurisdiction. (For instance, under the [[?GDPR]], the [=person=] may be
 conveying objections to [=processing=] based on legitimate interest or the withdrawal of
 [=consent=] to specific [=purposes=].) It should be noted that, since a [=global opt-out=]
 signal is reaffirmed automatically with every interaction, it will take precedence
@@ -653,7 +653,7 @@ the user with the intent of overriding their global opt-out.
 
 <dfn data-lt="privacy labor|labour|labor">Privacy labour</dfn> is the practice of having a [=person=] carry out
 the work of ensuring [=data processing=] of which they are the subject or recipient is
-[=appropriate=], instead of having the [=parties=] be responsible for that work.
+[=appropriate=], instead making the [=parties=] responsible for that work.
 Data systems that are based on asking [=people=] for their [=consent=] tend to increase
 [=privacy labour=].
 
@@ -663,7 +663,7 @@ offload [=labour=] to [=people=]. This is notably true of the regimes descended 
 elaborated in the 1970s in support of individual [=autonomy=] in the face of growing concerns with databases. The
 [=FIPs=] generally assume that there is sufficiently little [=data processing=] taking place that any
 [=person=] will be able to carry out sufficient diligence to enable [=autonomy=] in their
-decision-making. Since they entirely offload the [=privacy labour=]
+decision-making. Since they offload the [=privacy labour=]
 to people and assume perfect, unlimited [=autonomy=], the [=FIPs=] do not forbid specific
 types of [=data processing=] but only place them under different procedural requirements.
 Such an approach is [=appropriate=] for [=parties=] that are processing data in the 1970s.
@@ -673,7 +673,7 @@ requirements in situations where people find themselves in a significant asymmet
 power with a [=party=] — for instance a [=person=] using an essential service provided by a
 monopolistic platform — and those where people and [=parties=] are very much on equal
 footing, or even where the [=person=] may have greater power, as is the case with small
-businesses operating in a competitive environment. It further does not consider cases in
+businesses operating in a competitive environment. They further do not consider cases in
 which one [=party=] may coerce other [=parties=] into facilitating its [=inappropriate=]
 practices, as is often the case with dominant players in advertising or
 in content aggregation ([[?Consent-Lackeys]], [[?CAT]]).
@@ -1574,7 +1574,7 @@ practices would include making sure that:
 * there exist contractual terms between the [=first party=] and [=third party=]
   describing the limited [=purpose=] for which the data is being shared.
 
-Note that [=controlled de-identified data=], on its own, is not sufficient to render
+Note that [=controlled de-identified data=], on its own, is not sufficient to make
 [=data processing=] [=appropriate=].
 
 ## Collective Privacy {#collective-privacy}
@@ -1774,7 +1774,7 @@ that are typically harmless individually but that become a nuisance in aggregate
 sending of images that will cause shock or disgust due to their graphic, violent, or explicit nature
 (eg. pictures of one's genitals). While it is impossible, in a communication system involving many
 [=people=], to offer perfect protection against all kinds of unwanted information, steps can be
-taken to make the sending of such messages more difficult or more costly, and to render the senders
+taken to make the sending of such messages more difficult or more costly, and to make the senders
 more accountable. Examples of mitigations include:
 
 * Restricting what new users of a service can post, notably limiting links and media until they have
