--- a/index.html
+++ b/index.html
@@ -685,7 +685,8 @@ and choice</i>", which, in today's digital environment, is often an indication t
 
 ## Collective Governance {#collective}
 
-Privacy [=principles=] are socially negotiated and the definition of [=privacy=] is essentially
+Privacy [=principles=] are defined through social processes and because of that the applicable definition
+of [=privacy=] in a given context can be
 contested ([[?Privacy-Contested]]). This makes privacy a problem of collective action ([[?GKC-Privacy]]).
 Group-level [=data processing=] may impact populations or individuals, including in
 ways that [=people=] could not control even under the optimistic assumptions of [=consent=].
@@ -696,7 +697,7 @@ job ads there. Visitors to that page are implicitly having their [=data=] proces
 ([[?Relational-Governance]]).
 
 What we consider is therefore not just the relation between the [=people=] who share data
-and the [=parties=] that invite that disclosure ([[?Relational-Turn]]), but also between the [=people=]
+and the [=parties=] that invite that sharing ([[?Relational-Turn]]), but also between the [=people=]
 who may find themselves categorised indirectly as part of a group even without sharing data. One key
 understanding here is that such relations may persist even when data is [=de-identified=]. What's
 more, such categorisation of people, voluntary or not, changes the way in which the world operates.
@@ -707,7 +708,7 @@ In general, collective issues in [=data=] require collective solutions. Web stan
 [=data governance=] by defining structural controls
 in [=user agents=] and establishing or delegating to institutions that can handle issues of [=privacy=].
 [=Governance=] will often struggle to achieve its goals if it works primarily by
-increasing <em>individual</em> control instead of acting collectively.
+increasing <em>individual</em> control instead of collective action.
 
 Collecting data at large scales can have significant pro-social outcomes. Problems tend to
 emerge when [=actors=] [=process=] [=data=]
@@ -726,7 +727,7 @@ created from opaque machine learning techniques).
 
 Protecting group privacy can take place at two different levels. The existence of a group or at
 least its activities may need to be protected even in cases in which its members are guaranteed to
-remain anonymous. We refer to this as "group privacy." Conversely, [=People=] may wish to protect
+remain anonymous. We refer to this as "group privacy." Conversely, [=people=] may wish to protect
 knowledge that they are members of the group even though the existence of the group and its actions
 may be well known (eg. membership in a dissidents movement under authoritarian rule), which we call
 "membership privacy". An example [=privacy violation=] for the former case
@@ -739,7 +740,7 @@ members of the group so as to advocate for their rights together, or when they c
 understand why they are being categorised into a given group, their ability to protect themselves
 through self-governing approaches to privacy is largely eliminated.
 
-One common problem in group privacy is when the actions of one member of a group reveals information
+One common problem in group privacy is when the actions of one member of a group reveal information
 that other members would prefer were not shared in this way (or at all). For instance, one person
 may publish a picture of an event in which they are featured alongside others while the other people
 captured in the same picture would prefer their participation not to be disclosed. Another example
