--- a/index.html
+++ b/index.html
@@ -752,8 +752,7 @@ carefully considered by people building websites.
 ### Transparency and Research {#transparency}
 
 While transparency rarely helps enough to inform the individual choices that [=people=] may
-make or in increasing their [=autonomy=], it plays a critical role in letting
-researchers and reporters inform our
+make, it plays a critical role in letting researchers and reporters inform our
 collective decision-making about privacy [=principles=]. This consideration extends the
 TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2015/11/strong-web-platform-statement/)
 to ensure that "<i>broad testing and audit continues to be possible</i>" where
@@ -773,13 +772,13 @@ information, and serve their [=user=] by providing them with automation to recti
 [=automation asymmetries=]. Where possible, they protect their [=user=] from receiving
 intrusive messages.
 
-The [=user agent=] is expected to align fully with the [=person=] using it and operate exclusively
+The [=user agent=] is expected to align fully with the [=person=] using it and to operate exclusively
 in that [=person=]'s interest. It is <em>not</em> the [=first party=]. The [=user agent=] serves the
 [=person=] as a <dfn>trustworthy agent</dfn>:
 it always puts that [=person=]'s interest first. In some occasions, this can mean protecting
 that [=person=] from themselves by preventing them from carrying out a dangerous decision,
 or by slowing down the person in their decision. For example, the
-[=user agent=] will make it difficult for that [=person=] to connect to a site if it can't verify
+[=user agent=] will make it difficult for someone to connect to a site if it can't verify
 that the site is authentic. It will check that that [=person=] really intends to expose a
 sensitive device to a page. It will prevent that [=person=] from consenting to the permanent
 monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> include
@@ -792,7 +791,7 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
     simple security measures. It is insufficient to just encrypt at rest and in transit,
     but the [=user agent=] must also limit retention, help ensure that only strictly
     necessary data is collected, and require guarantees from any [=party=] that the user agent can
-    reasonably be aware that it is shared to.
+    reasonably be aware that data is shared to.
   </dd>
   <dt><dfn class="export">Duty of Discretion</dfn></dt>
   <dd>
@@ -809,7 +808,7 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
     information of which the [=user agent=] can reasonably be aware, that is relevant to
     them and that will increase their
     autonomy, as long as they can understand it and there's an appropriate
-    time. This is almost never when the [=person=] is trying to do something else such as
+    time to do so. This is almost never when the [=person=] is trying to do something else such as
     read a page or activate a feature. The duty of honesty goes well beyond that of
     transparency that is often included in older privacy regimes. Unlike transparency, honesty
     can't hide relevant information in complex legal notices and it can't rely on
@@ -861,11 +860,11 @@ off between principles.
 
 Once one is choosing between different designs at the Pareto frontier, the choice of which
 privacy principles to prefer is complex and depends heavily on the details of each
-particular situation. <span class="note">Note that people's privacy can also be in tension
+particular situation. Note that people's privacy can also be in tension
 with non-privacy concerns. As discussed in the [[[Ethical-Web]]], "it is important to
 consider the context in which a particular technology is being applied, the expected
 audience(s) for the technology, who the technology benefits and who it may disadvantage,
-and any power dynamics involved".</span> Despite this complexity, there is a basic ground
+and any power dynamics involved". Despite this complexity, there is a basic ground
 rule to follow:
 
 <div class="practice">
@@ -889,13 +888,13 @@ rules.
 A site might segregate the data it collects for safety reasons from its business data by:
 
 1. Specifying in its privacy statement that these types of data are kept separate and
-   implementing policies and procedures to ensure the data is stored separately. (legal
-   and procedural/compliance measures)
+   implementing policies and procedures to ensure the data is stored separately. (Legal
+   and procedural/compliance measures.)
 1. Using multi-party computation to ensure that its business side can't learn the
    sensitive safety data unless both its safety side and a trusted independent third party
-   collude. (A technical measure)
-1. Hiring a trusted auditor to publicly check that the data is effectively segregated. (a
-   compliance measure)
+   collude. (A technical measure.)
+1. Hiring a trusted auditor to publicly check that the data is effectively segregated. (A
+   compliance measure.)
 
 </aside>
 
